--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,13 +134,15 @@ include_directories(
 
 ## Declare a C++ executable
 add_executable(face_detection_node src/face_detection.cpp)
+add_executable(laser_node src/laser.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
 # add_dependencies(project_rsc_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
- target_link_libraries(face_detection_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(face_detection_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+target_link_libraries(laser_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
