--- a/package.xml
+++ b/package.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0"?>
 <package>
   <name>project_rsc</name>
-  <version>0.0.0</version>
+  <version>0.1.0</version>
   <description>The project_rsc package</description>
 
-  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
+  <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
   <maintainer email="vincent@todo.todo">vincent</maintainer>
+  <maintainer email="jonas@spanoghe.net">jonas</maintainer>
+  <maintainer email="alexis@todo.todo">alexis</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
   <!-- Commonly used license strings: -->
   <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
-  <license>TODO</license>
-
+  <license>GPLv3</license>
 
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
   <!-- <url type="website">http://wiki.ros.org/project_rsc</url> -->
-
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
   <!-- Authors do not have to be maintianers, but could be -->
@@ -41,14 +41,11 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>cv_bridge</build_depend>
-  <build_depend>opencv2</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <run_depend>cv_bridge</run_depend>
-  <run_depend>opencv2</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
-
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
