--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,6 +141,7 @@ add_executable(face_detection_node src/face_detection.cpp)
 add_executable(laser_node src/laser.cpp)
 add_executable(r2serial_node src/r2serial.cpp)
 add_executable(pilot_node src/pilot.cpp src/movement.cpp src/odometry.cpp)
+add_executable(mockdriver_node src/mock_driver.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
@@ -151,6 +152,7 @@ target_link_libraries(face_detection_node ${catkin_LIBRARIES} ${OpenCV_LIBRARIES
 target_link_libraries(laser_node ${catkin_LIBRARIES})
 target_link_libraries(r2serial_node ${catkin_LIBRARIES})
 target_link_libraries(pilot_node ${catkin_LIBRARIES})
+target_link_libraries(mockdriver_node ${catkin_LIBRARIES})
 
 #############
 ## Install ##
